--- a/css/style.css
+++ b/css/style.css
@@ -18,21 +18,62 @@ body {
   grid-template-rows: 1fr auto; }
 
 .container {
-  max-width: 450px; }
+  max-width: 450px;
+  margin: 0 auto; }
+  @media (min-width: 1140px) {
+    .container {
+      width: 100%;
+      max-width: unset;
+      background-image: url(../images/bg-pattern-desktop.svg);
+      background-size: contain; } }
 
 .base__container {
   padding: 3rem; }
+  @media (min-width: 1140px) {
+    .base__container {
+      width: 80%;
+      padding: 6rem 0 0 8rem;
+      justify-self: center;
+      align-self: center; } }
 
 .base {
-  margin-bottom: 6rem; }
+  display: grid;
+  grid-template-rows: max-content auto max-content; }
+  @media (min-width: 1140px) {
+    .base {
+      height: 100vh;
+      grid-template-columns: 1fr 61rem; } }
+  .base__logo-container {
+    grid-row: 1 / 2; }
+    @media (min-width: 1140px) {
+      .base__logo-container {
+        width: 80%;
+        grid-row: 1 / 2;
+        grid-column: 1 / 2; } }
   .base__logo {
-    width: 32%;
+    width: 27%;
     display: block; }
-  .base__img {
-    width: 100%;
-    display: block; }
+    @media (min-width: 1140px) {
+      .base__logo {
+        margin-top: 1rem; } }
+  .base__img-container {
+    padding: 13rem 0;
+    background-image: url(../images/hero-mobile.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    grid-row: 2 / 2; }
+    @media (min-width: 1140px) {
+      .base__img-container {
+        background-image: url(../images/hero-desktop.jpg);
+        grid-row: 1 / -1;
+        grid-column: 2 / -1; } }
   .base__content {
     text-align: center; }
+    @media (min-width: 1140px) {
+      .base__content {
+        text-align: left;
+        grid-column: 1 / 2; } }
   .base__heading {
     color: #413a3a;
     text-transform: uppercase;
@@ -40,6 +81,12 @@ body {
     letter-spacing: 1.2rem;
     line-height: 4.2rem;
     margin: 3.5rem 0 1.5rem 0; }
+    @media (min-width: 1140px) {
+      .base__heading {
+        font-size: 6.5rem;
+        line-height: 7rem;
+        letter-spacing: 1.8rem;
+        margin: 6rem 0 1.5rem 0; } }
     .base__heading--highlighted {
       color: #ce9797;
       font-weight: 300; }
@@ -49,18 +96,30 @@ body {
     font-weight: 600;
     line-height: 2rem;
     margin-bottom: 3.5rem; }
+    @media (min-width: 1140px) {
+      .base__text {
+        width: 75%;
+        font-size: 1.6rem;
+        line-height: 3rem; } }
   .base__form {
-    display: flex;
+    width: 100%;
     position: relative; }
+    @media (min-width: 1140px) {
+      .base__form {
+        width: 77%; } }
   .base__input {
     width: 100%;
     color: #ce9797;
     background-color: transparent;
     border: 0.1rem solid #ce9797;
-    border-radius: 5rem;
+    border-radius: 10rem;
     font-family: "Josefin Sans", sans-serif;
     font-size: 1.4rem;
     padding: 1.5rem 2.5rem; }
+    @media (min-width: 1140px) {
+      .base__input {
+        font-size: 1.6rem;
+        padding: 1.8rem 3rem; } }
   .base__button {
     width: 20%;
     height: 100%;
@@ -72,6 +131,9 @@ body {
     right: 0;
     box-shadow: rgba(219, 136, 136, 0.5) 0px 10px 20px 0px;
     transition: all 0.2s; }
+    @media (min-width: 1140px) {
+      .base__button {
+        width: 22%; } }
     .base__button:hover {
       cursor: pointer;
       box-shadow: rgba(219, 136, 136, 0.7) 0px 10px 20px 0px; }
@@ -79,7 +141,10 @@ body {
 .attribution {
   font-size: 1rem;
   text-align: center;
-  margin: 1rem 0; }
+  margin: 15rem 0 0 0; }
+  @media (min-width: 1140px) {
+    .attribution {
+      text-align: left; } }
   .attribution__link:link, .attribution__link:visited {
     text-transform: uppercase;
     color: #ce9797;
