--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -1,18 +1,55 @@
 .base {
-  margin-bottom: 6rem;
+  display: grid;
+  grid-template-rows: max-content auto max-content;
 
-  &__logo {
-    width: 32%;
-    display: block;
+  @media (min-width: 1140px) {
+    height: 100vh;
+    grid-template-columns: 1fr 61rem;
   }
 
-  &__img {
-    width: 100%;
+  &__logo-container {
+    grid-row: 1 / 2;
+
+    @media (min-width: 1140px) {
+      width: 80%;
+      grid-row: 1 / 2;
+      grid-column: 1 / 2;
+    }
+  }
+
+  &__logo {
+    width: 27%;
     display: block;
+
+    @media (min-width: 1140px) {
+      margin-top: 1rem;
+    }
+  }
+
+  &__img-container {
+    padding: 13rem 0;
+    background-image: url(../images/hero-mobile.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+
+    grid-row: 2 / 2;
+
+    @media (min-width: 1140px) {
+      background-image: url(../images/hero-desktop.jpg);
+
+      grid-row: 1 / -1;
+      grid-column: 2 / -1;
+    }
   }
 
   &__content {
     text-align: center;
+
+    @media (min-width: 1140px) {
+      text-align: left;
+      grid-column: 1 / 2;
+    }
   }
 
   &__heading {
@@ -22,6 +59,13 @@
     letter-spacing: 1.2rem;
     line-height: 4.2rem;
     margin: 3.5rem 0 1.5rem 0;
+
+    @media (min-width: 1140px) {
+      font-size: 6.5rem;
+      line-height: 7rem;
+      letter-spacing: 1.8rem;
+      margin: 6rem 0 1.5rem 0;
+    }
 
     &--highlighted {
       color: $color-primary;
@@ -35,11 +79,21 @@
     font-weight: 600;
     line-height: 2rem;
     margin-bottom: 3.5rem;
+
+    @media (min-width: 1140px) {
+      width: 75%;
+      font-size: 1.6rem;
+      line-height: 3rem;
+    }
   }
 
   &__form {
-    display: flex;
+    width: 100%;
     position: relative;
+
+    @media (min-width: 1140px) {
+      width: 77%;
+    }
   }
 
   &__input {
@@ -47,10 +101,15 @@
     color: $color-primary;
     background-color: transparent;
     border: 0.1rem solid $color-primary;
-    border-radius: 5rem;
+    border-radius: 10rem;
     font-family: $font-primary;
     font-size: 1.4rem;
     padding: 1.5rem 2.5rem;
+
+    @media (min-width: 1140px) {
+      font-size: 1.6rem;
+      padding: 1.8rem 3rem;
+    }
   }
 
   &__button {
@@ -65,6 +124,10 @@
     box-shadow: rgba(219, 136, 136, 0.5) 0px 10px 20px 0px;
     transition: all 0.2s;
 
+    @media (min-width: 1140px) {
+      width: 22%;
+    }
+
     &:hover {
       cursor: pointer;
       box-shadow: rgba(219, 136, 136, 0.7) 0px 10px 20px 0px;
@@ -75,7 +138,11 @@
 .attribution {
   font-size: 1rem;
   text-align: center;
-  margin: 1rem 0;
+  margin: 15rem 0 0 0;
+
+  @media (min-width: 1140px) {
+    text-align: left;
+  }
 
   &__link:link,
   &__link:visited {
