--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-rows: max-content auto max-content;
 
-  @media (min-width: 1140px) {
+  @media (min-width: 800px) {
     height: 100vh;
     grid-template-columns: 1fr 61rem;
   }
@@ -10,7 +10,7 @@
   &__logo-container {
     grid-row: 1 / 2;
 
-    @media (min-width: 1140px) {
+    @media (min-width: 800px) {
       width: 80%;
       grid-row: 1 / 2;
       grid-column: 1 / 2;
@@ -21,7 +21,7 @@
     width: 27%;
     display: block;
 
-    @media (min-width: 1140px) {
+    @media (min-width: 800px) {
       margin-top: 1rem;
     }
   }
@@ -31,11 +31,11 @@
     background-image: url(../images/hero-mobile.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: top center;
 
     grid-row: 2 / 2;
 
-    @media (min-width: 1140px) {
+    @media (min-width: 800px) {
       background-image: url(../images/hero-desktop.jpg);
 
       grid-row: 1 / -1;
@@ -46,7 +46,7 @@
   &__content {
     text-align: center;
 
-    @media (min-width: 1140px) {
+    @media (min-width: 800px) {
       text-align: left;
       grid-column: 1 / 2;
     }
@@ -60,7 +60,7 @@
     line-height: 4.2rem;
     margin: 3.5rem 0 1.5rem 0;
 
-    @media (min-width: 1140px) {
+    @media (min-width: 800px) {
       font-size: 6.5rem;
       line-height: 7rem;
       letter-spacing: 1.8rem;
@@ -80,7 +80,7 @@
     line-height: 2rem;
     margin-bottom: 3.5rem;
 
-    @media (min-width: 1140px) {
+    @media (min-width: 800px) {
       width: 75%;
       font-size: 1.6rem;
       line-height: 3rem;
@@ -91,7 +91,7 @@
     width: 100%;
     position: relative;
 
-    @media (min-width: 1140px) {
+    @media (min-width: 800px) {
       width: 77%;
     }
   }
@@ -106,7 +106,7 @@
     font-size: 1.4rem;
     padding: 1.5rem 2.5rem;
 
-    @media (min-width: 1140px) {
+    @media (min-width: 800px) {
       font-size: 1.6rem;
       padding: 1.8rem 3rem;
     }
@@ -124,7 +124,7 @@
     box-shadow: rgba(219, 136, 136, 0.5) 0px 10px 20px 0px;
     transition: all 0.2s;
 
-    @media (min-width: 1140px) {
+    @media (min-width: 800px) {
       width: 22%;
     }
 
@@ -140,7 +140,7 @@
   text-align: center;
   margin: 15rem 0 0 0;
 
-  @media (min-width: 1140px) {
+  @media (min-width: 800px) {
     text-align: left;
   }
 
