--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,8 @@ body {
     .base__container {
       width: 80%;
       padding: 6rem 0 0 8rem;
-      justify-self: center;
-      align-self: center; } }
+      align-self: center;
+      justify-self: center; } }
 
 .base {
   display: grid;
@@ -42,13 +42,13 @@ body {
   @media (min-width: 800px) {
     .base {
       height: 100vh;
-      grid-template-columns: 1fr 61rem; } }
+      grid-template-columns: 1fr 61rem;
+      grid-auto-rows: auto; } }
   .base__logo-container {
     grid-row: 1 / 2; }
     @media (min-width: 800px) {
       .base__logo-container {
         width: 80%;
-        grid-row: 1 / 2;
         grid-column: 1 / 2; } }
   .base__logo {
     width: 27%;
@@ -57,7 +57,7 @@ body {
       .base__logo {
         margin-top: 1rem; } }
   .base__img-container {
-    padding: 13rem 0;
+    padding: 13rem;
     background-image: url(../images/hero-mobile.jpg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -78,8 +78,8 @@ body {
     color: #413a3a;
     text-transform: uppercase;
     font-size: 3.9rem;
-    letter-spacing: 1.2rem;
     line-height: 4.2rem;
+    letter-spacing: 1.2rem;
     margin: 3.5rem 0 1.5rem 0; }
     @media (min-width: 800px) {
       .base__heading {
@@ -102,7 +102,6 @@ body {
         font-size: 1.6rem;
         line-height: 3rem; } }
   .base__form {
-    width: 100%;
     position: relative; }
     @media (min-width: 800px) {
       .base__form {
@@ -124,19 +123,21 @@ body {
     width: 20%;
     height: 100%;
     background-image: linear-gradient(135deg, #f8bfbf, #ee8c8c);
+    outline: none;
     border: none;
     border-radius: 5rem;
+    box-shadow: rgba(206, 151, 151, 0.5) 0px 15px 20px;
     position: absolute;
     top: 0;
     right: 0;
-    box-shadow: rgba(219, 136, 136, 0.5) 0px 10px 20px 0px;
     transition: all 0.2s; }
     @media (min-width: 800px) {
       .base__button {
         width: 22%; } }
-    .base__button:hover {
-      cursor: pointer;
-      box-shadow: rgba(219, 136, 136, 0.7) 0px 10px 20px 0px; }
+    @media (hover: hover) {
+      .base__button:hover {
+        cursor: pointer;
+        box-shadow: rgba(206, 151, 151, 0.7) 0px 15px 20px; } }
 
 .attribution {
   font-size: 1rem;
