--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -2,6 +2,11 @@ $color-primary: hsl(0, 36%, 70%);
 $color-primary--dark: hsl(0, 93%, 68%);
 $color-secondary: hsl(0, 6%, 24%);
 $gradient-primary: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
+$gradient-primary--hover: linear-gradient(
+  135deg,
+  hsl(0, 47%, 90%),
+  hsl(0, 79%, 85%)
+);
 $gradient-secondary: linear-gradient(
   135deg,
   hsl(0, 0%, 100%),
@@ -27,7 +32,6 @@ body {
   height: 100vh;
   font-size: 1.6rem;
   font-family: $font-primary;
-  background-image: $gradient-secondary;
   display: grid;
   grid-template-rows: 1fr auto;
 }
