--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,10 @@ body {
 .attribution {
   font-size: 1rem;
   text-align: center;
-  margin: 18rem 0 0 0; }
+  margin: 7rem 0 -5rem 0; }
+  @media (min-width: 600px) {
+    .attribution {
+      margin: 7rem 0 -2rem 0; } }
   @media (min-width: 900px) {
     .attribution {
       text-align: left;
