--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -195,7 +195,11 @@
 .attribution {
   font-size: 1rem;
   text-align: center;
-  margin: 18rem 0 0 0;
+  margin: 7rem 0 -5rem 0;
+
+  @media (min-width: 600px) {
+    margin: 7rem 0 -2rem 0;
+  }
 
   @media (min-width: 900px) {
     text-align: left;
