--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html {
   box-sizing: border-box; }
 
 body {
-  height: 100vh;
+  min-height: 100vh;
   font-size: 1.6rem;
   font-family: "Josefin Sans", sans-serif;
   display: grid;
