--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -30,8 +30,15 @@ html {
 
 body {
   min-height: 100vh;
+  background-image: $gradient-secondary;
   font-size: 1.6rem;
   font-family: $font-primary;
   display: grid;
   grid-template-rows: 1fr auto;
+
+  @media (min-width: 900px) {
+    background-image: url(../images/bg-pattern-desktop.svg), $gradient-secondary;
+    background-size: auto, auto;
+    background-repeat: repeat;
+  }
 }
