--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,7 @@ body {
   min-height: 100vh;
   background-image: linear-gradient(135deg, white, #fff5f5);
   font-size: 1.6rem;
-  font-family: "Josefin Sans", sans-serif;
-  display: grid;
-  grid-template-rows: 1fr auto; }
+  font-family: "Josefin Sans", sans-serif; }
   @media (min-width: 900px) {
     body {
       background-image: url(../images/bg-pattern-desktop.svg), linear-gradient(135deg, white, #fff5f5);
