--- a/css/style.css
+++ b/css/style.css
@@ -189,8 +189,7 @@ body {
 
 .attribution {
   font-size: 1rem;
-  text-align: center;
-  margin: 7rem 0 0 0; }
+  text-align: center; }
   @media (min-width: 900px) {
     .attribution {
       text-align: left;
